--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body><header>
-            <nav>
-              <a href="./index.html">WebStudio</a>
+<body><header class="header">
+            <nav class="header-list">
+              <a class="logo" href="./index.html"> <span class="web">Web</span> Studio</a>
                 <ul>
-                  <li><a href="#feutures">Studio</a></li>
-                  <li><a href="#portfolio">Portfolio</a></li>
-                  <li><a href="#team">Contacts</a></li>
+                  <li class="list-item"><a href="#feutures">Studio</a></li>
+                  <li class="list-item"><a href="#portfolio">Portfolio</a></li>
+                  <li class="list-item"><a href="#team">Contacts</a></li>
                 </ul>
             </nav>
-            <address>
+            <address class="header-list">
               <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
               </ul>
             </address>
     </header>
