add styles for hero section

--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body><header class="header">
-            <nav class="header-list">
-              <a class="logo" href="./index.html"> <span class="web">Web</span> Studio</a>
-                <ul>
-                  <li class="list-item"><a href="#feutures">Studio</a></li>
-                  <li class="list-item"><a href="#portfolio">Portfolio</a></li>
-                  <li class="list-item"><a href="#team">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="header-list">
-              <ul>
-                <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-              </ul>
-            </address>
+<body>
+    <header class="header">
+      <nav class="header-list">
+        <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
+          <ul class="list">
+            <li class="list-item"><a href="#feutures">Studio</a></li>
+            <li class="list-item"><a href="#portfolio">Portfolio</a></li>
+            <li class="list-item"><a href="#team">Contacts</a></li>
+          </ul>
+      </nav>
+      <address class="header-list">
+        <ul class="list">
+          <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
 
       <!-- Hero section -->
 
-      <section>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
+      <section class="hero">
+          <h1 class="hero-item">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- Feuture section -->
