--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -37,26 +41,26 @@
       <!-- Feuture section -->
 
       <section>
-        <h2 id="feutures">Feutures</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        <h2 id="feutures" class="feutures-title">Feutures</h2>
+        <ul class="feutures">
+          <li class="feutures-list">
+            <h3 class="feutures-item">Strategy</h3>
+            <p class="feutures-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
 
-          <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          <li class="feutures-list">
+            <h3 class="feutures-item">Punctuality</h3>
+            <p class="feutures-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          <li class="feutures-list">
+            <h3 class="feutures-item">Diligence</h3>
+            <p class="feutures-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
 
-          <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          <li class="feutures-list">
+            <h3 class="feutures-item">Technologies</h3>
+            <p class="feutures-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
       </ul>
       </section>
@@ -64,15 +68,15 @@
       <!-- What are we doing section -->
 
       <section>
-          <h2 id="portfolio">What are we doing</h2>
-          <ul>
-            <li>
+          <h2 id="portfolio" class="portfolio-item">What are we doing</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-1.jpg" alt="Computer" width="360" />
             </li>
-            <li>
+            <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-2.jpg" alt="Phone" width="360" />
             </li>
-            <li>
+            <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-3.jpg" alt="Computer and Phone" width="360" />
             </li>
           </ul>
@@ -81,28 +85,28 @@
 
       <!-- Team section -->
 
-      <section>
-          <h2 id="team">Our Team</h2>
-          <ul>
-            <li>
-              <img src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
+      <section class="team-section">
+          <h2 id="team" class="team-item">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-cards">
+              <img class="photo" src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="position">Product Designer</p>
             </li>
-            <li>
-              <img src="./images/team/img-2.jpg" alt="Tom Ford" width="264" />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+            <li class="team-cards">
+              <img class="photo" src="./images/team/img-2.jpg" alt="Tom Ford" width="264" />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="position">Frontend Developer</p>
             </li>
-            <li>
-              <img src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
+            <li class="team-cards">
+              <img class="photo" src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="position">Marketing</p>
             </li>
-            <li>
-              <img src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
+            <li class="team-cards">
+              <img class="photo" src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="position">UI Designer</p>
             </li>
           </ul>
       </section>
