--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="header-list">
+          <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
+            <ul class="list">
+              <li class="list-item"><a href="#feutures">Studio</a></li>
+              <li class="list-item"><a href="#portfolio">Portfolio</a></li>
+              <li class="list-item"><a href="#team">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="header-list">
+          <ul class="list">
+            <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </header>
+
+      <main>
+        
+      </main>
+
+      <footer class="footer">
+        <a href="./index.html" class="logo-footer"> <span class="web">Web</span>Studio</a>
+        <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
