--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,33 @@
       </header>
 
       <main>
-        
+        <!-- Button section -->
+        <ul>
+            <li> <button type="button">All</button></li>
+            <li> <button type="button">Web Site</button></li>
+            <li> <button type="button">App</button></li>
+            <li> <button type="button">Design</button></li>
+            <li> <button type="button">Marketing</button></li>
+        </ul>
+
+        <!-- Portfolio section -->
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
       </main>
 
       <footer class="footer">
