added lasts styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,32 +31,68 @@
 
       <main>
         <!-- Button section -->
-        <ul>
-            <li> <button type="button">All</button></li>
-            <li> <button type="button">Web Site</button></li>
-            <li> <button type="button">App</button></li>
-            <li> <button type="button">Design</button></li>
-            <li> <button type="button">Marketing</button></li>
+        <ul class="buttons">
+            <li class="buttons-list"> <button type="button" class="buttons-item">All</button></li>
+            <li class="buttons-list"> <button type="button" class="buttons-item">Web Site</button></li>
+            <li class="buttons-list"> <button type="button" class="buttons-item">App</button></li>
+            <li class="buttons-list"> <button type="button" class="buttons-item">Design</button></li>
+            <li class="buttons-list"> <button type="button" class="buttons-item">Marketing</button></li>
         </ul>
 
         <!-- Portfolio section -->
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+            <ul class="row">
+                <li class="row-list">
+                    <img class="row-images" src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
+                    <h3 class="row-title">Banking App Interface Concept</h3>
+                    <p class="row-text">App</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" width="360"/>
+                    <h3 class="row-title">Cashless Payment</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-3.jpg" alt="Computer and Phone" width="360">
+                    <h3 class="row-title">Meditation App</h3>
+                    <p class="row-text">App</p>
+                </li>
+            </ul>
 
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+            <ul class="row">
+                <li class="row-list">
+                    <img src="./images/portfolio/img-4.jpg" alt="Car and Driver" width="360">
+                    <h3 class="row-title">Taxi Service</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-5.jpg" alt="Phone" width="360">
+                    <h3 class="row-title">Screen Illustrations</h3>
+                    <p class="row-text">Design</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-6.jpg" alt="Girl in orange" width="360">
+                    <h3 class="row-title">Online Courses</h3>
+                    <p class="row-text">Marketing</p>
+                </li>
+            </ul>
 
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+            <ul class="row-last">
+                <li class="row-list">
+                    <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360">
+                    <h3 class="row-title">Instagram Stories Concept</h3>
+                    <p class="row-text">Design</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-8.jpg" alt="Fruits" width="360">
+                    <h3 class="row-title">Organic Food</h3>
+                    <p class="row-text">Web Site</p>
+                </li>
+                <li class="row-list">
+                    <img src="./images/portfolio/img-9.jpg" alt="Cup of Coffee and Barista" width="360">
+                    <h3 class="row-title">Fresh Coffee</h3>
+                    <p class="row-text">Web Site</p>
+                </li>
+            </ul>
       </main>
 
       <footer class="footer">
