--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav class="header-list">
         <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
           <ul class="list">
-            <li class="list-item"><a href="#feutures">Studio</a></li>
-            <li class="list-item"><a href="#portfolio">Portfolio</a></li>
+            <li class="list-item"><a href="./index.html">Studio</a></li>
+            <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
             <li class="list-item"><a href="#team">Contacts</a></li>
           </ul>
       </nav>
@@ -41,34 +41,36 @@
       <!-- Feuture section -->
 
       <section>
-        <h2 id="feutures" class="feutures-title">Feutures</h2>
-        <ul class="feutures">
-          <li class="feutures-list">
-            <h3 class="feutures-item">Strategy</h3>
-            <p class="feutures-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-          </li>
+        <div class="feutures-container">
+          <h2 id="feutures" class="feutures-title">Feutures</h2>
+          <ul class="feutures">
+            <li class="feutures-list">
+              <h3 class="feutures-item">Strategy</h3>
+              <p class="feutures-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
 
-          <li class="feutures-list">
-            <h3 class="feutures-item">Punctuality</h3>
-            <p class="feutures-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-          </li>
+            <li class="feutures-list">
+              <h3 class="feutures-item">Punctuality</h3>
+              <p class="feutures-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
 
-          <li class="feutures-list">
-            <h3 class="feutures-item">Diligence</h3>
-            <p class="feutures-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
+            <li class="feutures-list">
+              <h3 class="feutures-item">Diligence</h3>
+              <p class="feutures-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
 
-          <li class="feutures-list">
-            <h3 class="feutures-item">Technologies</h3>
-            <p class="feutures-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-      </ul>
+            <li class="feutures-list">
+              <h3 class="feutures-item">Technologies</h3>
+              <p class="feutures-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- What are we doing section -->
 
       <section>
-          <h2 id="portfolio" class="portfolio-item">What are we doing</h2>
+          <h2 class="portfolio-item">What are we doing</h2>
           <ul class="portfolio-list">
             <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-1.jpg" alt="Computer" width="360" />
