--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body id="Studio">
     <header class="header">
       <nav class="header-list">
         <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
@@ -42,7 +42,7 @@
 
       <section>
         <div class="feutures-container">
-          <h2 id="feutures" class="feutures-title">Feutures</h2>
+          <h2 class="feutures-title">Feutures</h2>
           <ul class="feutures">
             <li class="feutures-list">
               <h3 class="feutures-item">Strategy</h3>
@@ -71,7 +71,7 @@
 
       <section>
           <h2 class="portfolio-item">What are we doing</h2>
-          <ul class="portfolio-list">
+          <ul class="list">
             <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-1.jpg" alt="Computer" width="360" />
             </li>
@@ -87,7 +87,7 @@
 
       <!-- Team section -->
 
-      <section class="team-section">
+      <section class="list">
           <h2 id="team" class="team-item">Our Team</h2>
           <ul class="team-list">
             <li class="team-cards">
