--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body id="Portfolio">
     <header class="header">
         <nav class="header-list">
-          <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
+          <a href="./portfolio.html" class="logo">Web <span>Studio</span></a>
             <ul class="list">
-              <li class="list-item"><a href="#feutures">Studio</a></li>
-              <li class="list-item"><a href="#portfolio">Portfolio</a></li>
+              <li class="list-item"><a href="./index.html">Studio</a></li>
+              <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
               <li class="list-item"><a href="#team">Contacts</a></li>
             </ul>
         </nav>
@@ -96,7 +96,7 @@
       </main>
 
       <footer class="footer">
-        <a href="./index.html" class="logo-footer"> <span class="web">Web</span>Studio</a>
+        <a href="./index.html" class="link"> <span class="web">Web</span>Studio</a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
