--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="Studio">
     <header class="header">
       <nav class="header-list">
-        <a href="./index.html" class="logo"> <span class="web">Web</span> Studio</a>
+        <a href="./index.html" class="logo">Web <span>Studio</span></a>
           <ul class="list">
             <li class="list-item"><a href="./index.html">Studio</a></li>
             <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
@@ -116,7 +116,7 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo-footer"> <span class="web">Web</span>Studio</a>
+        <a href="./index.html" class="logo-footer">Web <span>Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
