--- a/portfolio.html
+++ b/portfolio.html
@@ -30,30 +30,30 @@
       </header>
 
       <main>
-        <!-- Button section -->
-        <ul class="buttons">
-            <li class="buttons-list"> <button type="button" class="buttons-item">All</button></li>
-            <li class="buttons-list"> <button type="button" class="buttons-item">Web Site</button></li>
-            <li class="buttons-list"> <button type="button" class="buttons-item">App</button></li>
-            <li class="buttons-list"> <button type="button" class="buttons-item">Design</button></li>
-            <li class="buttons-list"> <button type="button" class="buttons-item">Marketing</button></li>
+        <h1>Portfolio</h1>
+        <ul class="button-list">
+            <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
+            <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
+            <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
+            <li class="buttons"> <button type="button" class="buttons-item">Design</button></li>
+            <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
         </ul>
 
         <!-- Portfolio section -->
-            <ul class="row">
-                <li class="row-list">
+            <ul class="row-main-list">
+                <li class="row-list-item">
                     <img class="row-images" src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
-                    <h3 class="row-title">Banking App Interface Concept</h3>
+                    <h2 class="row-title">Banking App Interface Concept</h2>
                     <p class="row-text">App</p>
                 </li>
-                <li class="row-list">
+                <li class="row-list-item">
                     <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" width="360"/>
-                    <h3 class="row-title">Cashless Payment</h3>
+                    <h2 class="row-title">Cashless Payment</h2>
                     <p class="row-text">Marketing</p>
                 </li>
-                <li class="row-list">
+                <li class="row-list-item">
                     <img src="./images/portfolio/img-3.jpg" alt="Computer and Phone" width="360">
-                    <h3 class="row-title">Meditation App</h3>
+                    <h2 class="row-title">Meditation App</h2>
                     <p class="row-text">App</p>
                 </li>
             </ul>
@@ -61,17 +61,17 @@
             <ul class="row">
                 <li class="row-list">
                     <img src="./images/portfolio/img-4.jpg" alt="Car and Driver" width="360">
-                    <h3 class="row-title">Taxi Service</h3>
+                    <h2 class="row-title">Taxi Service</h2>
                     <p class="row-text">Marketing</p>
                 </li>
                 <li class="row-list">
                     <img src="./images/portfolio/img-5.jpg" alt="Phone" width="360">
-                    <h3 class="row-title">Screen Illustrations</h3>
+                    <h2 class="row-title">Screen Illustrations</h2>
                     <p class="row-text">Design</p>
                 </li>
                 <li class="row-list">
                     <img src="./images/portfolio/img-6.jpg" alt="Girl in orange" width="360">
-                    <h3 class="row-title">Online Courses</h3>
+                    <h2 class="row-title">Online Courses</h2>
                     <p class="row-text">Marketing</p>
                 </li>
             </ul>
@@ -79,24 +79,24 @@
             <ul class="row-last">
                 <li class="row-list">
                     <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360">
-                    <h3 class="row-title">Instagram Stories Concept</h3>
+                    <h2 class="row-title">Instagram Stories Concept</h2>
                     <p class="row-text">Design</p>
                 </li>
                 <li class="row-list">
                     <img src="./images/portfolio/img-8.jpg" alt="Fruits" width="360">
-                    <h3 class="row-title">Organic Food</h3>
+                    <h2 class="row-title">Organic Food</h2>
                     <p class="row-text">Web Site</p>
                 </li>
                 <li class="row-list">
                     <img src="./images/portfolio/img-9.jpg" alt="Cup of Coffee and Barista" width="360">
-                    <h3 class="row-title">Fresh Coffee</h3>
+                    <h2 class="row-title">Fresh Coffee</h2>
                     <p class="row-text">Web Site</p>
                 </li>
             </ul>
       </main>
 
       <footer class="footer">
-        <a href="./index.html" class="link"> <span class="web">Web</span>Studio</a>
+        <a href="./index.html" class="logo">Web <span>Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
