--- a/portfolio.html
+++ b/portfolio.html
@@ -30,16 +30,16 @@
       </header>
 
       <main>
+        <section>
         <h1>Portfolio</h1>
-        <ul class="button-list">
-            <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
-            <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
-            <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
-            <li class="buttons"> <button type="button" class="buttons-item">Design</button></li>
-            <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
-        </ul>
+            <ul class="button-list">
+                <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
+                <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
+                <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
+                <li class="buttons"> <button type="button" class="buttons-item">Design</button></li>
+                <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
+            </ul>
 
-        <!-- Portfolio section -->
             <ul class="row-main-list">
                 <li class="row-list-item">
                     <img class="row-images" src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
@@ -93,6 +93,7 @@
                     <p class="row-text">Web Site</p>
                 </li>
             </ul>
+        </section>
       </main>
 
       <footer class="footer">
