--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
       <main>
         <section>
         <h1>Portfolio</h1>
-            <ul class="button-list">
+            <ul class="list-button">
                 <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
                 <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
                 <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
@@ -40,11 +40,13 @@
                 <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
             </ul>
 
-            <ul class="row-main-list">
-                <li class="row-list-item">
-                    <img class="row-images" src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
-                    <h2 class="row-title">Banking App Interface Concept</h2>
-                    <p class="row-text">App</p>
+            <ul class="list-main-row">
+                <li>
+                    <a class="link-row">
+                        <img src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
+                        <h2 class="feutures-title">Banking App Interface Concept</h2>
+                        <p class="row-text">App</p>
+                    </a>
                 </li>
                 <li class="row-list-item">
                     <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" width="360"/>
