update css and index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body id="Portfolio">
     <header class="header">
         <nav class="header-list">
-          <a href="./portfolio.html" class="logo">Web <span>Studio</span></a>
+          <a href="./portfolio.html" class="link" class="logo">Web <span>Studio</span></a>
             <ul class="list">
               <li class="list-item"><a href="./index.html">Studio</a></li>
               <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
