--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body id="Studio">
     <header class="header">
       <nav class="header-list">
-        <a href="./index.html" class="logo">Web <span>Studio</span></a>
+        <a href="./index.html" class="link" class="logo">Web <span class="header-span">Studio</span></a>
           <ul class="list">
-            <li class="list-item"><a href="./index.html">Studio</a></li>
-            <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
-            <li class="list-item"><a href="#team">Contacts</a></li>
+            <li class="list"><a class="link" class="list-item" href="./index.html">Studio</a></li>
+            <li class="list"><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
+            <li class="list"><a class="link" class="list-item" href="">Contacts</a></li>
           </ul>
       </nav>
       <address class="header-list">
         <ul class="list">
-          <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="link" class="address-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" class="address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
