--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body id="Studio">
     <header class="header">
       <nav class="header-list">
-        <a href="./index.html" class="link" class="logo">Web <span class="header-span">Studio</span></a>
+        <a class="link" class="logo" href="./index.html">Web <span class="header-span">Studio</span></a>
           <ul class="list">
-            <li class="list"><a class="link" class="list-item" href="./index.html">Studio</a></li>
-            <li class="list"><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
-            <li class="list"><a class="link" class="list-item" href="">Contacts</a></li>
+            <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
+            <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="link" class="list-item" href="">Contacts</a></li>
           </ul>
       </nav>
       <address class="header-list">
