--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- What are we doing section -->
 
       <section>
-          <h2 class="portfolio-item">What are we doing</h2>
+          <h2 class="portfolio-title">What are we doing</h2>
           <ul class="list">
             <li class="portfolio-images">
               <img src="./images/whatarewedoing/img-1.jpg" alt="Computer" width="360" />
@@ -89,7 +89,7 @@
 
       <section class="list">
           <h2 id="team" class="team-item">Our Team</h2>
-          <ul class="team-list">
+          <ul class="list">
             <li class="team-cards">
               <img class="photo" src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
               <h3 class="team-name">Mark Guerrero</h3>
@@ -116,7 +116,7 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo-footer">Web <span>Studio</span></a>
+        <a href="./index.html" class="link" class="logo">Web <span class="footer-span">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
