--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 </li>
             </ul>
 
-            <ul class="row-last">
+            <ul class="list">
                 <li class="row-list">
                     <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360">
                     <h2 class="row-title">Instagram Stories Concept</h2>
@@ -99,7 +99,7 @@
       </main>
 
       <footer class="footer">
-        <a href="./index.html" class="logo">Web <span>Studio</span></a>
+        <a href="./index.html" class="link" class="logo">Web <span class="footer-span">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
