--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
       <!-- Team section -->
 
-      <section class="list">
-          <h2 id="team" class="team-item">Our Team</h2>
+      <section class="list" class="team-section">
+          <h2 id="team" class="team-title">Our Team</h2>
           <ul class="list">
             <li class="team-cards">
               <img class="photo" src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
