--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,11 @@
 <body id="Portfolio">
     <header class="header">
         <nav class="header-list">
-          <a href="./portfolio.html" class="link" class="logo">Web <span>Studio</span></a>
+          <a class="link" class="logo" href="./portfolio.html">Web <span>Studio</span></a>
             <ul class="list">
-              <li class="list-item"><a href="./index.html">Studio</a></li>
-              <li class="list-item"><a href="./portfolio.html">Portfolio</a></li>
-              <li class="list-item"><a href="#team">Contacts</a></li>
+              <li class="list-item"><a class="link" href="./index.html">Studio</a></li>
+              <li class="list-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+              <li class="list-item"><a class="link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-list">
