update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <!-- Team section -->
 
-      <section class="list" class="team-section">
+      <section class="team-section">
           <h2 id="team" class="team-title">Our Team</h2>
           <ul class="list">
             <li class="team-cards">
