--- a/portfolio.html
+++ b/portfolio.html
@@ -31,70 +31,80 @@
 
       <main>
         <section>
-        <h1>Portfolio</h1>
-            <ul class="list-button">
-                <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
-                <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
-                <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
-                <li class="buttons"> <button type="button" class="buttons-item">Design</button></li>
-                <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
-            </ul>
+            <h1>Portfolio</h1>
+                <ul class="list">
+                    <li class="buttons"> <button type="button" class="buttons-item">All</button></li>
+                    <li class="buttons"> <button type="button" class="buttons-item">Web Site</button></li>
+                    <li class="buttons"> <button type="button" class="buttons-item">App</button></li>
+                    <li class="buttons"> <button type="button" class="buttons-item">Design</button></li>
+                    <li class="buttons"> <button type="button" class="buttons-item">Marketing</button></li>
+                </ul>
 
-            <ul class="list-main-row">
-                <li>
-                    <a class="link-row">
-                        <img src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
-                        <h2 class="feutures-title">Banking App Interface Concept</h2>
-                        <p class="row-text">App</p>
-                    </a>
-                </li>
-                <li class="row-list-item">
-                    <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" width="360"/>
-                    <h2 class="row-title">Cashless Payment</h2>
-                    <p class="row-text">Marketing</p>
-                </li>
-                <li class="row-list-item">
-                    <img src="./images/portfolio/img-3.jpg" alt="Computer and Phone" width="360">
-                    <h2 class="row-title">Meditation App</h2>
-                    <p class="row-text">App</p>
-                </li>
-            </ul>
-
-            <ul class="row">
-                <li class="row-list">
-                    <img src="./images/portfolio/img-4.jpg" alt="Car and Driver" width="360">
-                    <h2 class="row-title">Taxi Service</h2>
-                    <p class="row-text">Marketing</p>
-                </li>
-                <li class="row-list">
-                    <img src="./images/portfolio/img-5.jpg" alt="Phone" width="360">
-                    <h2 class="row-title">Screen Illustrations</h2>
-                    <p class="row-text">Design</p>
-                </li>
-                <li class="row-list">
-                    <img src="./images/portfolio/img-6.jpg" alt="Girl in orange" width="360">
-                    <h2 class="row-title">Online Courses</h2>
-                    <p class="row-text">Marketing</p>
-                </li>
-            </ul>
-
-            <ul class="list">
-                <li class="row-list">
-                    <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360">
-                    <h2 class="row-title">Instagram Stories Concept</h2>
-                    <p class="row-text">Design</p>
-                </li>
-                <li class="row-list">
-                    <img src="./images/portfolio/img-8.jpg" alt="Fruits" width="360">
-                    <h2 class="row-title">Organic Food</h2>
-                    <p class="row-text">Web Site</p>
-                </li>
-                <li class="row-list">
-                    <img src="./images/portfolio/img-9.jpg" alt="Cup of Coffee and Barista" width="360">
-                    <h2 class="row-title">Fresh Coffee</h2>
-                    <p class="row-text">Web Site</p>
-                </li>
-            </ul>
+                <ul class="list">
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-1.jpg" alt="Banking App Interface Concept" width="360" />
+                            <h2 class="row-title">Banking App Interface Concept</h2>
+                            <p class="row-text">App</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment" width="360"/>
+                            <h2 class="row-title">Cashless Payment</h2>
+                            <p class="row-text">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-3.jpg" alt="Computer and Phone" width="360">
+                            <h2 class="row-title">Meditation App</h2>
+                            <p class="row-text">App</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link"> 
+                            <img src="./images/portfolio/img-4.jpg" alt="Car and Driver" width="360">
+                            <h2 class="row-title">Taxi Service</h2>
+                            <p class="row-text">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-5.jpg" alt="Phone" width="360">
+                            <h2 class="row-title">Screen Illustrations</h2>
+                            <p class="row-text">Design</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-6.jpg" alt="Girl in orange" width="360">
+                            <h2 class="row-title">Online Courses</h2>
+                            <p class="row-text">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360">
+                            <h2 class="row-title">Instagram Stories Concept</h2>
+                            <p class="row-text">Design</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-8.jpg" alt="Fruits" width="360">
+                            <h2 class="row-title">Organic Food</h2>
+                            <p class="row-text">Web Site</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link">
+                            <img src="./images/portfolio/img-9.jpg" alt="Cup of Coffee and Barista" width="360">
+                            <h2 class="row-title">Fresh Coffee</h2>
+                            <p class="row-text">Web Site</p>
+                        </a>
+                    </li>
+                </ul>
         </section>
       </main>
 
