--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="Studio">
     <header class="header">
-      <nav class="header-list">
+      <nav>
         <a class="link" class="logo" href="./index.html">Web <span class="header-span">Studio</span></a>
           <ul class="list">
             <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
@@ -21,7 +21,7 @@
             <li><a class="link" class="list-item" href="">Contacts</a></li>
           </ul>
       </nav>
-      <address class="header-list">
+      <address>
         <ul class="list">
           <li><a class="link" class="address-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="link" class="address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -114,7 +114,7 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="link" class="logo">Web <span class="footer-span">Studio</span></a>
+        <a class="link" class="logo" href="./index.html">Web <span class="footer-span">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
