--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,18 @@
 </head>
 <body id="Portfolio">
     <header class="header">
-        <nav class="header-list">
+        <nav>
           <a class="link" class="logo" href="./portfolio.html">Web <span>Studio</span></a>
             <ul class="list">
-              <li class="list-item"><a class="link" href="./index.html">Studio</a></li>
-              <li class="list-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
-              <li class="list-item"><a class="link" href="">Contacts</a></li>
+              <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
+              <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="link" class="list-item" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="header-list">
+        <address>
           <ul class="list">
-            <li class="list-address"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-address"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="link" class="list-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" class="list-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
       </header>
@@ -109,7 +109,7 @@
       </main>
 
       <footer class="footer">
-        <a href="./index.html" class="link" class="logo">Web <span class="footer-span">Studio</span></a>
+        <a class="link" class="logo" href="./index.html">Web <span class="footer-span">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
