--- a/portfolio.html
+++ b/portfolio.html
@@ -14,17 +14,18 @@
 <body id="Portfolio">
     <header class="header">
         <nav>
-          <a class="link" class="logo" href="./portfolio.html">Web <span>Studio</span></a>
+          <a class="link" class="logo" href="./portfolio.html">Web <span class="header-span">Studio</span></a>
             <ul class="list">
               <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
               <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
               <li><a class="link" class="list-item" href="">Contacts</a></li>
             </ul>
         </nav>
+
         <address>
           <ul class="list">
-            <li><a class="link" class="list-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" class="list-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="link" class="address-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" class="address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
       </header>
