--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
       <section>
           <h2 class="portfolio-title">What are we doing</h2>
           <ul class="list">
-            <li class="portfolio-images">
+            <li>
               <img src="./images/whatarewedoing/img-1.jpg" alt="Computer" width="360" />
             </li>
-            <li class="portfolio-images">
+            <li>
               <img src="./images/whatarewedoing/img-2.jpg" alt="Phone" width="360" />
             </li>
-            <li class="portfolio-images">
+            <li>
               <img src="./images/whatarewedoing/img-3.jpg" alt="Computer and Phone" width="360" />
             </li>
           </ul>
@@ -89,23 +89,23 @@
       <section class="team-section">
           <h2 id="team" class="team-title">Our Team</h2>
           <ul class="list">
-            <li class="team-cards">
-              <img class="photo" src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
+            <li>
+              <img src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="position">Product Designer</p>
             </li>
-            <li class="team-cards">
-              <img class="photo" src="./images/team/img-2.jpg" alt="Tom Ford" width="264" />
+            <li>
+              <img src="./images/team/img-2.jpg" alt="Tom Ford" width="264" />
               <h3 class="team-name">Tom Ford</h3>
               <p class="position">Frontend Developer</p>
             </li>
-            <li class="team-cards">
-              <img class="photo" src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" />
+            <li>
+              <img src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" />
               <h3 class="team-name">Camila Garcia</h3>
               <p class="position">Marketing</p>
             </li>
-            <li class="team-cards">
-              <img class="photo" src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" />
+            <li>
+              <img src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" />
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="position">UI Designer</p>
             </li>
