--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body id="Studio">
     <header class="header">
-        <nav>
-          <a class="link" class="logo" href="./index.html">Web <span class="header-span">Studio</span></a>
+        <a class="link" class="logo" href="./index.html">Web <span class="header-span">Studio</span></a>
+          <nav>
             <ul class="list">
               <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
               <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
@@ -89,22 +89,22 @@
       <section class="team-section">
           <h2 id="team" class="team-title">Our Team</h2>
           <ul class="list">
-            <li>
+            <li class="team-list">
               <img src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" />
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="position">Product Designer</p>
             </li>
-            <li>
+            <li class="team-list">
               <img src="./images/team/img-2.jpg" alt="Tom Ford" width="264" />
               <h3 class="team-name">Tom Ford</h3>
               <p class="position">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-list">
               <img src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" />
               <h3 class="team-name">Camila Garcia</h3>
               <p class="position">Marketing</p>
             </li>
-            <li>
+            <li class="team-list">
               <img src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" />
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="position">UI Designer</p>
