--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="Studio">
     <header class="header">
         <nav>
-          <a class="link" class="logo" href="./index.html">Web <span class="header-span">Studio</span></a>
+          <a class="logo link" href="./index.html">Web <span class="header-span">Studio</span></a>
             <ul class="list">
               <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
               <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
@@ -115,7 +115,7 @@
     </main>
 
     <footer class="footer">
-        <a class="link" class="logo" href="./index.html">Web <span class="footer-span">Studio</span></a>
+        <a class="logo link" href="./index.html">Web <span class="footer-span">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
